webapp/static/css/styles.scss
@import "shooting-stars";

:root {
  --bs-body-bg: #000 !important;
  --bs-body-color: #fff !important;
}

body {
  background-color: var(--bs-body-bg);
}

#logo {
  z-index: 10;
}

#canvas-container {
  height: 100%;
  width: 50%;
  z-index: 10;
}

.message-container {
  position: relative;
  height: 75vh;
  overflow-y: auto;
}

.transcript-container {
  position: relative;
  max-height: 50vh;
  overflow-y: auto;
}

#top-divider {
  color: #706f7e;
  border-top: 4px solid;
  opacity: 0.75;
}

#top-header, #top-right {
  height: 170px;
}

.hamburger {
  background: transparent;
  border: transparent;
  cursor: pointer;
  padding: 0;
  z-index: 10;
}

.hamburger__line {
  background: rgb(203 213 225);
  margin: 0.25rem 0;
  height: 0.25rem;
  width: 2rem;
  transition: all 0.3s ease-out;
}

.hamburger:hover .hamburger__line:nth-child(1) {
  transform: translate(-2px, 4px) rotate(-45deg);
  width: 16px;
}

.hamburger:hover .hamburger__line:nth-child(3) {
  transform: translate(-2px, -4px) rotate(45deg);
  width: 16px;
}

.icon {
  &:hover {
    filter: drop-shadow(0.12rem 0.12rem 0.62rem #fff) drop-shadow(-0.12rem -0.12rem 0.62rem #fff);
    color: #9f9fdd;
    cursor: pointer;
    transform: translateY(-0.06rem);
  }
}

#menu {
  position: absolute;
  top: 5rem;
  right: 5rem;
  border: 0.12rem solid #0f0;
  border-radius: 0.7rem;
  box-shadow: 0.06rem 0.06rem 0.31rem #00f, -0.06rem -0.06rem 0.31rem #00f;
  background-color: #0d0926;
}

.button-small {
  --bs-btn-padding-y: .25rem !important;
  --bs-btn-padding-x: .5rem !important;
  --bs-btn-font-size: .75rem !important;
}

.chatbot-container {
  display: grid;
  grid-template-columns: 4fr 2fr;
}

.chatbot-container:before {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  background-image: url("/static/img/background.png");
  opacity: 0.2;
  z-index: -1;
  pointer-events: none; /* Allow text from the main div be selectable */
}

.chatbot-sidepanel {
  border-left: #333 solid 2px;
}

.notice {
  color: #00eaff;
  width: 16rem;
}

.role {
  color: #7e92c8;
}

.modal-content {
  border: 0.12rem solid #fff;
  background-color: #0d0926 !important;
  border-color: #3a395f !important;
}

.form-control, .form-select {
  background-color: #3c1679 !important;
  color: #fff !important;
}

/* Used to hide mustached content before Vue has loaded */
[v-cloak] {
  display: none;
}

.fadein-enter-active, .fadein-leave-active {
  transition: opacity 1.0s ease;
}

.fadein-enter-from, .fadein-leave-to {
  opacity: 0;
}

/* Border animation for preferences */
/* Source: https://codepen.io/jlengstorf/pen/WNPGMJo */

/**
 * `@property` is required for the animation to work.
 * Without it, the angle values won’t interpolate properly.
 *
 * @see https://dev.to/afif/we-can-finally-animate-css-gradient-kdk
 */
@property --bg-angle {
  inherits: false;
  initial-value: 0deg;
  syntax: "<angle>";
}

/**
 * To animate the gradient, we set the custom property to 1 full
 * rotation. The animation starts at the default value of `0deg`.
 */
@keyframes spin {
  to {
    --bg-angle: 360deg;
  }
}


#menu {
  /* add the animation, but pause it by default */
  animation: spin 2.5s infinite linear;

  /**
   * Using `background-origin` we can create a “border” using two gradients. And to
   * make the gradients better-looking, we use OKLCH.
   *
   * @see https://developer.mozilla.org/en-US/docs/Web/CSS/background-origin
   * @see https://evilmartians.com/chronicles/oklch-in-css-why-quit-rgb-hsl
   */
  background:
    /* Background colors don’t work with `background-origin`, so use a gradient. */
    linear-gradient(
        to bottom,
        oklch(0.1 0.2 240 / 0.95),
        oklch(0.1 0.2 240 / 0.95)
      )
      padding-box, /* ends at inner border edges */
    conic-gradient(
        from var(--bg-angle) in oklch longer hue,
        oklch(1 0.37 0) 0 0
      )
      border-box; /* extends to outer border edges */

  /* a clear border lets the background gradient shine through */
  border: 6px solid transparent;

  border-radius: 1rem;
  box-shadow: 0.125rem 0.25rem 0.25rem 0.5rem oklch(0.1 0.37 315 / 0.25);
  color: white;
  padding: 1rem;
}

/* Slider */
.custom-slider {
  width: 11rem;
}

/* Oruga switches */

#switches .o-switch__label {
  margin-left: 0.5rem !important;
}

.o-switch__check {
  margin-left: 0.5rem !important;
}

.o-switch__check--checked {
  background: #3d4687 !important;
}

.o-switch__label {
  margin-left: 1rem !important;
}

#audioPlayer {
  position: fixed;
  bottom: 0;
  left: 0;
  height: 4rem;
  width: 100%;
  background: rgb(2,25,48);
background: linear-gradient(90deg, rgba(2,25,48,1) 0%, rgba(90,90,172,1) 93%);
  padding: 10px;
  text-align: center;
  border-top: 1px solid #dee2e6;

  #songIndex {
    position: absolute;
    right: 0.6rem;
    top: 0.6rem;
  }
}

media-controller {
  background-color: #021930;
  border-radius: 0.40rem;
  width: 40rem;
}

.media-control-bar {
  background-color: #021930;
  flex-flow: wrap;
}

media-play-button, media-time-display, media-time-range, media-mute-button, media-volume-range {
  background-color: #021930;
}

@media screen and (max-width: 1200px) {
  media-playback-rate-button {
    display: none;
  }
}

media-volume-range {
  flex-grow: 1;
}

#transcript {
  margin: 1rem;
  border: 1px solid #666666;
  padding: 0.5rem;
  border-radius: 0.40rem;
  background-color: #222;

  &:hover {
    .hover-target {
      display: flex !important;
    }
  }
}

#copyIcon {
  position: absolute;
  top: 0.5rem;
  right: 0.5rem;

  svg {
    color: #7a7a7a;
  }

  &:hover {
    filter: drop-shadow(0.12rem 0.12rem 0.62rem #666) drop-shadow(-0.12rem -0.12rem 0.62rem #666);
    opacity: 1;
  }
}

.file-input-wrapper {
  position: relative;
  overflow: hidden;
  display: inline-block;
  padding: 0.25rem;

  &:hover {
    background-color: #392b2b;
    border-radius: 0.40rem;
  }
}

/* Hide the default file-input widget */
.file-input {
  font-size: 100px;
  position: absolute;
  left: 0;
  top: 0;
  opacity: 0;
}

/* Navbar */
.navbar-nav {
  .nav-item {
    .nav-link {
      background-color: #101541 !important;
    }
  }

  .nav-item.active .nav-link {
    color: #fff !important;
    font-weight: bold !important;
  }

  .nav-item:first-child .nav-link {
    border-top-left-radius: 0.75rem !important;
    border-bottom-left-radius: 0.75rem !important;
  }

  .nav-item:last-child .nav-link {
    border-top-right-radius: 0.75rem !important;
    border-bottom-right-radius: 0.75rem !important;
  }
}

/* Style the scrollbars */

::-webkit-scrollbar {
  width: 0.5rem;
}

::-webkit-scrollbar-track {
  border-radius: 0.6rem;
}

::-webkit-scrollbar-thumb {
  background-color: #0f0f5e;
  border-radius: 0.6rem;
}

::-webkit-scrollbar-thumb:hover {
  background-color: #3d4687;
}

::-webkit-scrollbar-corner {
  background-color: rgba(0, 0, 0, 0.5);
}

